Add Tex/LaTex to skills, and make position date grey instead of red

--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -27,7 +27,7 @@
                 %{\tabitem Altium, Eagle, LTSPICE \newline
                  %\tabitem Oscilloscopes, Function Generators, DMMs, Logic Analyzer \newline
                  %\tabitem Git, SVN, CVS}
-    \cvskillcol{\item C, C++, Matlab, Python, Assembler, TCL
+    \cvskillcol{\item C, C++, Matlab, Python, Assembler, TCL, TeX/LaTeX
                 \item Embedded Development: device drivers and firmware
                 \item Real Time Operating Systems
                 \item Control Algorithms }
