Fix some small typos

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -37,7 +37,7 @@
         \item {Implemented automatic firmware tests to verify hardware integrity on system startup}
         \item {Designed a control algorithm to maintain voltage level output of DC-AC inverter with varying output loads}
         \item {Integrated into existing board new capacitor bleed circuit and voltage quadrupler circuit to generate high voltage DC from AC input}
-        \item {Performed circuit Simulation in LTSPICE to model new circuitry before adding it to the PCB}
+        \item {Performed circuit simulation in LTSPICE to model new circuitry before adding it to the PCB}
         \item {Debugged noisy DC-AC inverter with multiple hardware and software tests}
         \item {Reworked board to test out various snubber and choke circuits for reducing noise}
       \end{cvitems}
