Update Lumotune section

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -28,18 +28,17 @@
 %---------------------------------------------------------
   \cventry
     {Lumotune} % Organization
-    {Hardware Design Engineer} % Job title
+    {Hardware Design Engineer, Intern} % Job title
     %{Waterloo, Ontario} % Location
     {January 2017 - April 2017} % Date(s)
     {}
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Implemented automatic firmware tests to verify hardware integrity on system startup}
-        \item {Designed a control algorithm to maintain voltage level output of DC-AC inverter with varying output loads}
-        \item {Integrated into existing board new capacitor bleed circuit and voltage quadrupler circuit to generate high voltage DC from AC input}
-        \item {Performed circuit simulation in LTSPICE to model new circuitry before adding it to the PCB}
-        \item {Debugged noisy DC-AC inverter with multiple hardware and software tests}
-        \item {Reworked board to test out various snubber and choke circuits for reducing noise}
+        \item {Designed a control algorithm to maintain output voltage of DC-AC inverter with varying output loads}
+        \item {Developed a new capacitor bleed circuit and voltage quadrupler circuit to generate high voltage DC from AC input}
+        \item {Performed circuit simulation in LTSPICE to model above new circuitry before adding it to the PCB}
+        \item {Debugged switching voltage regulator with high output ripple by reworking board to test out multiple types of output filters}
       \end{cvitems}
     }
 
