--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -19,16 +19,18 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Designed, assembled, and developed software for board to stabilize the flight of a quadcopter}
         \item {Used Altium Designer to create schematics and PCB layout of board which included an ARM-Cortex M4 processor and multiple MEMS IMU sensors}
-        \item {Hand soldered board and performed multiple software and hardware tests to ensure full functionality}
-        \item {Developed control software, running on FreeRTOS, to stabilize flight of quadcopter by controlling motor speeds based on sensor input}
+        %\item {Hand soldered board and performed multiple software and hardware tests to ensure full functionality}
+        \item {Developed control software, using FreeRTOS, to stabilize quadcopter flight by controlling motor speeds based on sensor input}
+        %\item {Implemented sensor fusion algorithm to combine multiple sensor inputs and cascaded PID control to perform quadcopter auto levelling}
+        \item {Implemented sensor fusion algorithm to combine sensor inputs and cascaded PID control to perform quadcopter auto levelling}
         \item {Implemented asynchronous reading of sensors over I2C using DMA with the resultant performance increase allowing faster control loop frequency}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Waterloo Formula Electric} % Organization
     {Data Aquisition Unit} % Job title
+    {Firmware Subteam Lead, Waterloo Formula Electric} % Organization
     {} % Location
     {} % Date(s)
     {
