--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -33,8 +33,10 @@
                 \item Control Algorithms }
                 {\item ARM-Cortex M, AVR Microcontrollers
                  \item Schematic capture, PCB Layout, Assembly and Rework
-                 \item Power Electronics including inverters, regulators, and rectifiers}
+                 \item Power Electronics including inverters, regulators, and rectifiers
+                 \item I$^2$C, SPI, SD SPI, UART, CAN protocols}
                 {\item Altium, Eagle, LTSPICE
                  \item Oscilloscopes, Function Generators, DMMs, Logic Analyzer
-                 \item Git, SVN, CVS}
+                 \item Git, SVN, CVS
+                 \item Gnu Make}
 \end{cvskillscolumn}
