--- a/resume.tex
+++ b/resume.tex
@@ -54,7 +54,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Richard}{Matthews}
-\position{University of Waterloo 3A Mechatronics Engineering}
+\position{University of Waterloo 3A Mechatronics Engineering, Class of 2020}
 %\address{Ottawa, Ontario}
 
 \mobile{(+1) 613-804-4373}
