--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -38,9 +38,11 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Implemented automatic firmware tests to verify hardware integrity on system startup}
-        \item {Designed a control algorithm to maintain output voltage of DC-AC inverter with varying output loads}
-        \item {Developed a new capacitor bleed circuit and voltage quadrupler circuit to generate high voltage DC from AC input}
-        \item {Performed circuit simulation in LTSPICE to model above new circuitry before adding it to the PCB}
+        \item {Designed a PI control algorithm to maintain output voltage of DC-AC inverter with varying output loads}
+        \item {Developed automatic capacitor bleed circuit and voltage quadrupler circuit to generate high voltage DC from AC input}
+        %\item {Developed circuitry to automatically discharge capacitors, increasing board reliability}
+        %\item {Implemented voltage quadrupler circuit to generate high voltage DC from AC input}
+        \item {Performed circuit simulation in LTSPICE to model the new circuitry described above}
         \item {Debugged switching voltage regulator with high output ripple by reworking board to test out multiple types of output filters}
       \end{cvitems}
     }
