--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -14,7 +14,7 @@
     {Quadcopter Flight Controller} % Job title
     {} % Organization
     {} % Location
-    {} % Date(s)
+    {July 2017 - December 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Designed, assembled, and developed software for board to stabilize the flight of a quadcopter}
@@ -32,7 +32,7 @@
     {Data Aquisition Unit} % Job title
     {Firmware Subteam Lead, Waterloo Formula Electric} % Organization
     {} % Location
-    {} % Date(s)
+    {January 2017 - April 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Developed firmware for onboard Data Acquisition Unit (DAU) running FreeRTOS}
