--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -27,7 +27,7 @@
                 %{\tabitem Altium, Eagle, LTSPICE \newline
                  %\tabitem Oscilloscopes, Function Generators, DMMs, Logic Analyzer \newline
                  %\tabitem Git, SVN, CVS}
-    \cvskillcol{\item C, C++, Matlab, Python, Assembler, TCL, TeX/LaTeX
+    \cvskillcol{\item C, C++, Python, Matlab, Assembler, TCL
                 \item Embedded Development: device drivers and firmware
                 \item Real Time Operating Systems
                 \item Control Algorithms }
@@ -38,5 +38,6 @@
                 {\item Altium, Eagle, LTSPICE
                  \item Oscilloscopes, Function Generators, DMMs, Logic Analyzer
                  \item Git, SVN, CVS
-                 \item Gnu Make}
+                 \item Gnu Make,
+                 \item Linux}
 \end{cvskillscolumn}
