--- a/resume.tex
+++ b/resume.tex
@@ -59,7 +59,7 @@
 
 \mobile{(+1) 613-804-4373}
 %\email{richard.arnold.matthews@gmail.com}
-\email{richard.matthews@uwaterloo.ca}
+\email{r4matthe@edu.uwaterloo.ca}
 \github{Rich143}
 \linkedin{richardmatthews1}
 % \gitlab{gitlab-id}
