--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -28,7 +28,7 @@
     }
 
 %---------------------------------------------------------
-  \cventry
+  \cventrytwo
     {Data Aquisition Unit} % Job title
     {Firmware Subteam Lead, Waterloo Formula Electric} % Organization
     {} % Location
