--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -20,7 +20,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         %\item {Developed new communication API for product simulator using interprocess shared memory}
         %\item {Created communication API for product simulator using interprocess shared memory between linux daemon and VM simulating router control board}
-        \item {Implemented communication API for product simulator using interprocess shared memory between linux daemon and QEMU VM}
+        \item {Implemented communication API for product simulator using interprocess shared memory between Linux daemon and QEMU VM}
         %\item {Implemented communication API for product simulator between QEMU VM and linux daemon using interprocess shared memory}
         \item {Shared memory communication decreased message transfer time by 75\% vs old communication API}
         \item {Developed unified API for communication between main processor and FPGAs}
