--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -35,9 +35,9 @@
                  \item Schematic capture, PCB Layout, Assembly and Rework
                  \item Power Electronics including inverters, regulators, and rectifiers
                  \item I$^2$C, SPI, SD SPI, UART, CAN protocols}
-                {\item Altium, Eagle, LTSPICE
+                {\item Altium, Eagle, LTSPICE, Vector CANdb++
                  \item Oscilloscopes, Function Generators, DMMs, Logic Analyzer
                  \item Git, SVN, CVS
-                 \item GNU Make
-                 \item Linux}
+                 \item Linux, GNU Make
+                 \item Google Test Unit Testing}
 \end{cvskillscolumn}
