--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -42,7 +42,8 @@
         \item {Developed automatic capacitor bleed circuit and voltage quadrupler circuit to generate high voltage DC from AC input}
         %\item {Developed circuitry to automatically discharge capacitors, increasing board reliability}
         %\item {Implemented voltage quadrupler circuit to generate high voltage DC from AC input}
-        \item {Performed circuit simulation in LTSPICE to model the new circuitry described above}
+        %\item {Performed circuit simulation in LTSPICE to model the new circuitry described above}
+        \item {Modelled all new circuitry in LTSPICE circuit simulator to verify and optimize designs}
         \item {Debugged switching voltage regulator with high output ripple by reworking board to test out multiple types of output filters}
       \end{cvitems}
     }
