--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -17,11 +17,11 @@
     {July 2017 - December 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Designed, assembled, and developed software for board to stabilize the flight of a quadcopter}
+        \item {Designed, assembled, and developed software for control board to stabilize the flight of a quadcopter}
         \item {Used Altium Designer to create schematics and PCB layout of board which included an ARM-Cortex M4 processor and multiple MEMS IMU sensors}
         \item {Developed control software, using FreeRTOS, to stabilize quadcopter flight by controlling motor speeds based on sensor input}
         \item {Implemented sensor fusion algorithm to combine sensor inputs and cascaded PID control to perform quadcopter auto levelling}
-        \item {Developed asynchronous reading of sensors over I2C using DMA reducing CPU load and allowing faster control loop frequency}
+        \item {Developed asynchronous reading of sensors over I\textsuperscript{2}C using DMA reducing CPU load and allowing faster control loop frequency}
       \end{cvitems}
     }
 
@@ -34,7 +34,7 @@
     {
       \begin{cvitems}
         %\item {Responsible for design and implementation of firmware for 2018 vehicle}
-        \item {Created state machines documenting desired behaviour of all vehicle ECUs}
+        \item {Created state machines documenting desired behaviour of all vehicle electrical control units (ECUs)}
         \item {Integrated into build system a python code generation script to create functions for defect tracking code transmission over CAN}
       \end{cvitems}
     }
