--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -34,10 +34,10 @@
                 {\item ARM-Cortex M, AVR Microcontrollers
                  \item Schematic capture, PCB Layout, Assembly and Rework
                  \item Power Electronics including inverters, regulators, and rectifiers
-                 \item I$^2$C, SPI, SD SPI, UART, CAN protocols}
+                 \item I\textsuperscript{2}C, SPI, SD SPI, UART, CAN protocols}
                 {\item Altium, Eagle, LTSPICE, Vector CANdb++
                  \item Oscilloscopes, Function Generators, DMMs, Logic Analyzer
                  \item Git, SVN, CVS
-                 \item Linux, GNU Make
-                 \item Google Test Unit Testing}
+                 \item Linux, Bash Scripting, GNU Make
+                 \item GoogleTest Unit Test Framework}
 \end{cvskillscolumn}
