WIP: Add Apple work term

--- a/awesome-cv.cls
+++ b/awesome-cv.cls
@@ -612,6 +612,17 @@
   \end{tabular*}%
 }
 
+% Define an entry of cv information
+% Usage: \cventry{<position>}{<title>}{<date>}
+\newcommand*{\cventryOneLine}[3]{%
+  \vspace{-2.0mm}
+  \setlength\tabcolsep{0pt}
+  \setlength{\extrarowheight}{0pt}
+  \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} L{\textwidth - 4.5cm} R{4.5cm}}
+    \entrytitlestyle{#1} \entrypositionstyle{#2} & \entrylocationstyle{#3} \\
+  \end{tabular*}%
+}
+
 % Define an environment for cvsubentry
 \newenvironment{cvsubentries}{%
   \begin{center}
