--- a/resume.tex
+++ b/resume.tex
@@ -94,6 +94,7 @@
 \input{resume/summary.tex}
 \input{resume/experience.tex}
 \input{resume/projects.tex}
+%\input{resume/more-experience.tex}
 %\input{resume/presentation.tex}
 %\input{resume/writing.tex}
 %\input{resume/committees.tex}
