--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -11,6 +11,24 @@
 
 %---------------------------------------------------------
   \cventry
+    {Apple} % Organization
+    {Embedded Software Developer} % Job title
+    %{Ottawa, Ontario} % Location
+    {May 2018 - August 2018} % Date(s)
+    {}
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Created test automation framework for EFI display driver code, and implemented tests to verify display setup}
+        \item {Modified EFI display driver code to intelligently determine failure causes and save information for use in testing}
+        \item {Created tests will prevent numerous common bugs that are occurring with increasing frequency}
+        \item {Implemented saving of debug data relating to EFI display setup for devices in field}
+        \item {Major display bug causing recall would have been prevented or mitigated in future due to new tests and debug data}
+        \item {Developed tool for storing GPU information in Serial EEPROM during manufacturing}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
     {Nokia} % Organization
     {Embedded Software Developer} % Job title
     %{Ottawa, Ontario} % Location
@@ -49,43 +67,43 @@
     }
 
 %---------------------------------------------------------
-  \cventry
+  \cventryOneLine
+    {Software Developer,} % Job title
     {Solace Systems} % Organization
-    {Software Developer} % Job title
     %{Ottawa, Ontario} % Location
     {May 2016 - August 2016} % Date(s)
-    {}
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed multiple features in Python for new REST API used to configure messaging router product}
-        \item {Improved reliability and ease of development by automating the classification of new configuration attributes added to the API}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Alcatel-Lucent} % Organization
-    {Embedded Software Developer} % Job title
-    %{Ottawa, Ontario} % Location
-    {September 2015 - December 2015} % Date(s)
-    {}
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented interrupt driven processing of DSL lines to reduce task CPU usage by 50\%}
-        \item {Modified a CPU usage monitoring/profiling tool to handle multi-core systems using VxWorks RTOS}
-        \item {Created numerous tools to aid with debugging low-level code}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  %\cventry
-    %{Software Tester} % Job title
-    %{Alcatel-Lucent} % Organization
-    %{Ottawa, Ontario} % Location
-    %{January 2015 - April 2015} % Date(s)
+    %{}
     %{
       %\begin{cvitems} % Description(s) of tasks/responsibilities
-        %\item {Developed and modified TCL scripts to automate testing of CLI commands}
+        %%\item {Developed multiple features in Python for new REST API used to configure messaging router product}
+        %%\item {Improved reliability and ease of development by automating the classification of new configuration attributes added to the API}
+      %\end{cvitems}
+    %}
+
+%---------------------------------------------------------
+  \cventryOneLine
+    {Embedded Software Developer,} % Job title
+    {Alcatel-Lucent} % Organization
+    %{Ottawa, Ontario} % Location
+    {September 2015 - December 2015} % Date(s)
+    %{}
+    %{
+      %\begin{cvitems} % Description(s) of tasks/responsibilities
+        %%\item {Implemented interrupt driven processing of DSL lines to reduce task CPU usage by 50\%}
+        %%\item {Modified a CPU usage monitoring/profiling tool to handle multi-core systems using VxWorks RTOS}
+        %%\item {Created numerous tools to aid with debugging low-level code}
+      %\end{cvitems}
+    %}
+
+%---------------------------------------------------------
+  \cventryOneLine
+    {Software Tester,} % Job title
+    {Alcatel-Lucent} % Organization
+    %{Ottawa, Ontario} % Location
+    {January 2015 - April 2015} % Date(s)
+    %{
+      %\begin{cvitems} % Description(s) of tasks/responsibilities
+        %%\item {Developed and modified TCL scripts to automate testing of CLI commands}
         %%\item {Key tester for new “update boot-loader” CLI command}
       %\end{cvitems}
     %}
