--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -8,6 +8,37 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
+%---------------------------------------------------------
+  \cventrytwo
+    {Firmware Subteam Lead} % Organization
+    {2018 Vehicle Firmware, Waterloo Formula Electric} % Organization
+    {} % Location
+    {January 2018 - Present} % Date(s)
+    {
+      \begin{cvitems}
+        %\item {Responsible for design and implementation of firmware for 2018 vehicle}
+        \item {Created state machines documenting desired behaviour of all vehicle electrical control units (ECUs)}
+        %\item {Integrated into build system a python code generation script to create functions for defect tracking code transmission over CAN}
+        \item {Created python script to generate C code for sending and receiving CAN messages based on message and defect code database}
+        \item {Implemented CAN driver with interrupt driven message transmit/receive and abstraction layer to support multiple processors}
+        \item {Developed vehicle control unit state machine, controlling motors based on driver input and data from battery management system}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventrythree
+    {}
+    {Data Acquisition Unit, Waterloo Formula Electric} % Job title
+    {} % Location
+    {January 2017 - April 2017} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Developed firmware for onboard Data Acquisition Unit (DAU) running FreeRTOS, which logged data from analog and digital sensors}
+        \item {Developed SD card driver to initialize, read and write data over the SD card SPI interface}
+        \item {Synchronized multiple tasks to read from sensors at varying frequencies and log output to SD card}
+        %\item {Programmed DAU to log data from multiple analog sensors and GPS location to SD card}
+      \end{cvitems}
+    }
 
 %---------------------------------------------------------
   \cventry
@@ -22,35 +53,6 @@
         \item {Developed control software, using FreeRTOS, to stabilize quadcopter flight by controlling motor speeds based on sensor input}
         \item {Implemented sensor fusion algorithm to combine sensor inputs and cascaded PID control to perform quadcopter auto levelling}
         \item {Developed asynchronous reading of sensors over I\textsuperscript{2}C using DMA reducing CPU load and allowing faster control loop frequency}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventrytwo
-    {2018 Vehicle Firmware Design} % Organization
-    {Firmware Subteam Lead, Waterloo Formula Electric} % Organization
-    {} % Location
-    {January 2018 - Present} % Date(s)
-    {
-      \begin{cvitems}
-        %\item {Responsible for design and implementation of firmware for 2018 vehicle}
-        \item {Created state machines documenting desired behaviour of all vehicle electrical control units (ECUs)}
-        \item {Integrated into build system a python code generation script to create functions for defect tracking code transmission over CAN}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventrythree
-    {}
-    {Data Aquisition Unit} % Job title
-    {} % Location
-    {January 2017 - April 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed firmware for onboard Data Acquisition Unit (DAU) running FreeRTOS, which logged data from analog and digital sensors}
-        \item {Developed SD card driver to initialize, read and write data over the SD card SPI interface}
-        \item {Synchronized multiple tasks to read from sensors at varying frequencies and log output to SD card}
-        %\item {Programmed DAU to log data from multiple analog sensors and GPS location to SD card}
       \end{cvitems}
     }
 
