Finished updating for Apple Work Term

--- a/resume.tex
+++ b/resume.tex
@@ -21,7 +21,7 @@
 \documentclass[11pt, letterpaper]{awesome-cv}
 
 % Configure page margins with geometry
-\geometry{left=1.4cm, top=.8cm, right=1.4cm, bottom=1.4cm, footskip=.5cm}
+\geometry{left=1.4cm, top=.8cm, right=1.4cm, bottom=.8cm, footskip=.5cm}
 
 % Specify the location of the included fonts
 \fontdir[fonts/]
@@ -57,7 +57,7 @@
 \position{University of Waterloo 3A Mechatronics Engineering, Class of 2020}
 %\address{Ottawa, Ontario}
 
-\mobile{(+1) 613-804-4373}
+\mobile{(+1) 408-921-9865}
 %\email{richard.arnold.matthews@gmail.com}
 \email{r4matthe@edu.uwaterloo.ca}
 \github{Rich143}
