--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -30,7 +30,9 @@
     \cvskillcol{\item C, C++, Python, Matlab, Assembler, TCL, Perl
                 \item Embedded Development: device drivers and firmware
                 \item Real Time Operating Systems
-                \item Control Algorithms }
+                \item Control Algorithms
+                \item Display Drivers, EFI
+                    }
                 {\item ARM-Cortex M, AVR Microcontrollers
                  \item Schematic capture, PCB Layout, Assembly and Rework
                  \item Power Electronics including inverters, regulators, and rectifiers
