--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -20,9 +20,11 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Created test automation framework for EFI display driver code, and implemented tests to verify display setup}
         \item {Modified EFI display driver code to intelligently determine failure causes and save information for use in testing}
-        \item {Created tests will prevent numerous common bugs that are occurring with increasing frequency}
+        \item {Created tests that will prevent numerous common bugs that are occurring with increasing frequency}
         \item {Implemented saving of debug data relating to EFI display setup for devices in field}
-        \item {Major display bug causing recall would have been prevented or mitigated in future due to new tests and debug data}
+        \item {Saved data adds visibility for debugging issues similar to past field failures}
+        %\item {Together, tests and debug data add framework for greatly improving EFI development where none existed previously}
+        %\item {Major display bug causing recall would have been prevented or mitigated in future due to new tests and debug data}
         \item {Developed tool for storing GPU information in Serial EEPROM during manufacturing}
       \end{cvitems}
     }
@@ -49,7 +51,7 @@
 %---------------------------------------------------------
   \cventry
     {Lumotune} % Organization
-    {Hardware Design Engineer, Intern} % Job title
+    {Hardware Design Intern} % Job title
     %{Waterloo, Ontario} % Location
     {January 2017 - April 2017} % Date(s)
     {}
