--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -17,7 +17,7 @@
     {
       \begin{cvitems}
         %\item {Responsible for design and implementation of firmware for 2018 vehicle}
-        \item {Created state machines documenting desired behaviour of all vehicle electrical control units (ECUs)}
+        %\item {Created state machines documenting desired behaviour of all vehicle electrical control units (ECUs)}
         %\item {Integrated into build system a python code generation script to create functions for defect tracking code transmission over CAN}
         \item {Created python script to generate C code for sending and receiving CAN messages based on message and defect code database}
         \item {Implemented CAN driver with interrupt driven message transmit/receive and abstraction layer to support multiple processors}
@@ -34,8 +34,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Developed firmware for onboard Data Acquisition Unit (DAU) running FreeRTOS, which logged data from analog and digital sensors}
-        \item {Developed SD card driver to initialize, read and write data over the SD card SPI interface}
-        \item {Synchronized multiple tasks to read from sensors at varying frequencies and log output to SD card}
+        \item {Synchronized multiple tasks to read from sensors at varying frequencies and implemented SD card driver to allow logging data}
         %\item {Programmed DAU to log data from multiple analog sensors and GPS location to SD card}
       \end{cvitems}
     }
@@ -49,10 +48,10 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Designed, assembled, and developed software for control board to stabilize the flight of a quadcopter}
-        \item {Used Altium Designer to create schematics and PCB layout of board which included an ARM-Cortex M4 processor and multiple MEMS IMU sensors}
+        \item {Created schematics and PCB layout for board which included an ARM-Cortex M4 processor and multiple MEMS IMU sensors}
         \item {Developed control software, using FreeRTOS, to stabilize quadcopter flight by controlling motor speeds based on sensor input}
         \item {Implemented sensor fusion algorithm to combine sensor inputs and cascaded PID control to perform quadcopter auto levelling}
-        \item {Developed asynchronous reading of sensors over I\textsuperscript{2}C using DMA reducing CPU load and allowing faster control loop frequency}
+        \item {Developed asynchronous reading of sensors over I\textsuperscript{2}C using DMA, reducing CPU load and allowing faster control loop frequency}
       \end{cvitems}
     }
 
