--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -40,6 +40,6 @@
                 {\item Altium, Eagle, LTSPICE, Vector CANdb++
                  \item Oscilloscopes, Function Generators, DMMs, Logic Analyzer
                  \item Git, SVN, CVS
-                 \item Linux, Bash Scripting, GNU Make
+                 \item Unix, Shell Scripting, GNU Make
                  \item GoogleTest Unit Test Framework}
 \end{cvskillscolumn}
