--- a/resume.tex
+++ b/resume.tex
@@ -54,10 +54,10 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Richard}{Matthews}
-\position{University of Waterloo 3A Mechatronics Engineering, Class of 2020}
+\position{University of Waterloo 3B Mechatronics Engineering, Class of 2020}
 %\address{Ottawa, Ontario}
 
-\mobile{(+1) 408-921-9865}
+\mobile{(+31) 644435619}
 %\email{richard.arnold.matthews@gmail.com}
 \email{r4matthe@edu.uwaterloo.ca}
 \github{Rich143}
