--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -10,25 +10,26 @@
 \begin{cventries}
 %---------------------------------------------------------
   \cventrytwo
-    {Firmware Subteam Lead} % Organization
-    {2018 Vehicle Firmware, Waterloo Formula Electric} % Organization
+    {Firmware Lead, 2018 Vehicle Firmware} % Organization
+    {Waterloo Formula Electric} % Organization
     {} % Location
-    {January 2018 - Present} % Date(s)
+    {January 2017 - Present} % Date(s)
     {
       \begin{cvitems}
         %\item {Responsible for design and implementation of firmware for 2018 vehicle}
         %\item {Created state machines documenting desired behaviour of all vehicle electrical control units (ECUs)}
         %\item {Integrated into build system a python code generation script to create functions for defect tracking code transmission over CAN}
+        \item {Developed firmware for vehicle boards which managed low and high voltage batteries, and controlled motors}
         \item {Created python script to generate C code for sending and receiving CAN messages based on message and defect code database}
         \item {Implemented CAN driver with interrupt driven message transmit/receive and abstraction layer to support multiple processors}
-        \item {Developed vehicle control unit state machine, controlling motors based on driver input and data from battery management system}
+        %\item {Developed vehicle control unit state machine, controlling motors based on driver input and data from battery management system}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventrythree
     {}
-    {Data Acquisition Unit, Waterloo Formula Electric} % Job title
+    {Data Acquisition Unit} % Job title
     {} % Location
     {January 2017 - April 2017} % Date(s)
     {
