Initial blackberry co-op add

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -11,6 +11,26 @@
 
 %---------------------------------------------------------
   \cventry
+    {Blackberry} % Organization
+    {Embedded Software Developer} % Job title
+    %{Ottawa, Ontario} % Location
+    {May 2019 - August 2019} % Date(s)
+    {}
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Created test automation framework for EFI display driver code, and implemented tests to verify display setup}
+        \item {Modified EFI display driver code to intelligently determine failure causes and save information for use in testing}
+        \item {Created tests that will prevent numerous common bugs that are occurring with increasing frequency}
+        \item {Implemented saving of debug data relating to EFI display setup for devices in field}
+        \item {Saved data adds visibility for debugging issues similar to past field failures}
+        %\item {Together, tests and debug data add framework for greatly improving EFI development where none existed previously}
+        %\item {Major display bug causing recall would have been prevented or mitigated in future due to new tests and debug data}
+        \item {Developed tool for storing GPU information in Serial EEPROM during manufacturing}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
     {Apple} % Organization
     {Embedded Software Developer} % Job title
     %{Ottawa, Ontario} % Location
